src/ContosoTraders.Ui.Website/src/index.css
/* ... */
#profile-dropdown .MuiPopover-paper{
  right: 122px!important;
  left: unset !important;
}
#profile-dropdown .MuiMenu-paper{
  box-shadow: 0px 3px 26px #00000029;
  border: 1px solid #E5E5E5;
  border-radius: 8px;
}
#profile-dropdown .MuiPopover-paper .MuiTypography-root{
  font-family: 'Poppins' !important;
  font-size: 16px;
}
#profile-dropdown .MuiPopover-paper .MuiListItemIcon-root{
  min-width: 40px;
}
#profile-dropdown .MuiPopover-paper ul li{
  min-width: 336px;
  padding: 12px 19px;
}
.minimalSelect{
  background-color: #0000000A;
  min-width: 238px;
  padding: 18px 0 18px 32px;
  border-radius: 114px;
  height: 56px;
}
.minimalSelect svg{
  margin-right: 32px;
}
.minimalSelect .MuiSelect-select{
  background-color: transparent !important;
  font-family: var(--fontInter);
  font-weight: 500;
  color: #626262;
  font-size: 16px;
}
.minimalSelect .MuiSelect-select:focus{
  background-color: transparent !important;
}
.productCard{
  box-shadow:none !important;
}
.productCard:hover{
  cursor: pointer;
  box-shadow: 0px 3px 6px #00000029 !important;
  border: 1px solid #E5E5E5;
  border-radius: 4px;
}
.productCard .MuiCardMedia-root{
  width: auto;
  height: 306px;
  margin: auto;
  background-size: contain;
}
.productCard .MuiCardContent-root{
  padding: 8px 8px 0 8px !important;
}
.productCard .wishlist_icon{
  padding: 0;
}
/* mainHeader */
.mainHeader{
  background-color: #fff;
  position: fixed;
  z-index: 100;
  width: 100%;
}
.mainHeader .categories-btn{
  min-width: 198px;
  background-color: #F8F8F8 !important;
  border: 1px solid #EFEFEF !important;
}
/* Header Message */
.headerMessageDiv{
  height: 55px;
  font-family: 'Poppins';
  letter-spacing: 0.42px;
  font-weight: 500;
  display: flex;
  align-items: center;
  justify-content: center;
}
.headerMessageDiv.warning{
  background-color: #F0A428;
  color: #fff;
}
.headerMessageDiv.error{
  background-color: #E81D1D;
  color: #fff;
}
/* //Appbar */
.appbar{
  box-shadow: none !important;
  padding-left: 70px;
  padding-right: 70px;
  padding-top: 31px;
}
.appbar .searchBar input{
  font-family: 'Roboto' !important;
  font-size: 14px !important;
  font-weight: 300 !important;
}
.appbar .searchBar .MuiOutlinedInput-adornedEnd{
  height: 48px;
  padding-right: 8px;
}
.appbar .searchBar input::placeholder{
  font-family: 'Roboto' !important;
  font-size: 14px !important;
  font-weight: 300 !important;
  color: #686868 !important;
}
.appbar .searchbar-upload{
  position: absolute;
  z-index: 110;
  width: 100%;
  text-align: center;
  padding: 30px;
  background-color: #fff;
  border: 1px solid #DFDFDF;
}
.appbar .searchbar-upload .upload{
  margin: auto;
  max-width: 100%;
  margin-top: 10px;
  background: transparent !important;
  display: flex;
  align-items: center;
  justify-content: center;
}
.appbar .searchbar-upload .upload .MuiDropzoneArea-textContainer, .appbar .searchbar-upload .upload .MuiDropzoneArea-textContainer .MuiDropzonePreviewList-root{
  display: none;
}
.appbar .searchbar-upload .upload .MuiDropzoneArea-root{
  display: flex;
  align-items: center;
  justify-content: center;
  /* background: #FAFAFA !important; */
  background: transparent;
}
.appbar .searchbar-upload .upload .upload__label{
  box-shadow: none;
  /* background: #FAFAFA !important; */
  position: absolute;
  z-index: -1;
}
.appbar .searchbar-upload .upload .upload__label img{
  width: 50px;
}
.appbar .iconButton{
  padding: 12px 18px;
}
.appbar .iconButton:focus{
  outline: none !important;
}
.appbar .headerLogo{
  height: 71px;
  width: 195px;
}
.appbar svg {
  fill: #2f4b66;
  overflow: unset;
}
.appbar .searchBtn{
  border-radius: 5px;
  padding: 5px;
}
.appbar .searchBtn:focus{
  outline: none;
}
.appbar .upload__subtitle{
  font-family: 'Roboto' !important;
}
.main-nav{
  margin-left: 50px;
}
.main-nav__item{
  text-decoration: none!important;
  text-transform: capitalize !important;
  text-align: left;
  font-family: 'Roboto' !important;
  letter-spacing: 0px !important;
  color: #302F2F !important;
  opacity: 0.92 !important;
  font-size: 14px !important;
  font-weight: 400 !important;
  padding: 14px 24px 20px 24px;
  text-align: center;
}
.main-nav__item:hover{
  text-decoration: none!important;
  text-transform: capitalize !important;
  text-align: left;
  font-family: 'Roboto', sans-serif !important;
  letter-spacing: 0px !important;
  color: #2F4B66 !important;
  opacity: 0.92 !important;
  font-size: 14px;
  font-weight: 500;
  padding: 14px 24px 14px 24px;
  border-bottom: 5px solid #2874F0 !important;
  background: rgba(40, 116, 240 , 0.1) !important;
  text-align: center;
}
.main-nav__item_active{
  text-decoration: none!important;
  text-transform: capitalize !important;
  text-align: left;
  font-family: 'Roboto', sans-serif !important;
  letter-spacing: 0px !important;
  color: #2F4B66 !important;
  opacity: 0.92 !important;
  font-size: 14px;
  font-weight: 500;
  padding: 14px 24px 20px 24px;
  border-bottom: 5px solid #2874F0 !important;
  background: rgba(40, 116, 240 , 0.1) !important;
  text-align: center;
}
/* Button test */
button[aria-label='Previous'] {
  margin-left: 70px;
}
button[aria-label='Next'] {
  margin-right: 70px;
}
.courousel-style{
  padding: 70px;
  /* background-image: url('./assets/images/original/Contoso_Assets/Slider_section/hero_banner.jpg') !important; */
  background-repeat: no-repeat !important;
  background-size: cover !important;
  background-position: right !important;
  min-height: 594px;
}
.courousel-style {
  background: #000000;
  cursor: pointer;
  max-height: 594px;
}
.courousel-style .BannerGrid{
  padding: 100px 100px 0px 70px !important;
}
.courousel-style .BannerHeading {
  text-align: left;
  font-family: var(--fontInter) !important;
  font-size: 34px !important;
  font-weight: 600 !important;
  color: #ffffff;
  opacity: 1;
  padding: 0px 0px 0px 0px;
  text-transform: capitalize;
  letter-spacing: -1.59px;
}
/* ... */

